# depmod

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
depmod/: __init__.py  config.py  core.py  deformation.py  io.py  lammps.py  log.py  maths.py  typing.py  units.py
depmod-lib/binding/: bind_config.cpp  bind_core.cpp
depmod-lib/include/: config.h  dtype.h  exastamp.h  lammps.h  linalg.h  stdafx.h
depmod-lib/src/: config.cpp  core.cpp  lammps.cpp
depmod/srclib/: bind_deform.cpp  bind_lammps.cpp  binding.cpp  deformation.cpp  deformation.h  lammps.cpp  linalg.cpp
examples/traction_isoV/: main.py
examples/traction_isoV/dir.input/: in.run_nve
scripts/: check_bzip2.sh  check_lzma.sh  check_zlib.sh  gen_test_io_templates.sh  run_tests.sh
src/cpp/: deformation.h  depmod.cpp  eigen.h  linalg.h  parsers.cpp  parsers.h  tokens.h
src/depmod/: __init__.py  cli.py  core.py  deformation.py  log.py  maths.py  units.py  utils.py
src/lib/binding/: bind_config.cpp  bind_deform.cpp
src/lib/include/: core.h  lammps.h
src/lib/src/: exastamp.cpp
tests/: conftest.py  test_config.py  test_cxxlib.py  test_deform.py  test_io.py  test_units.py
